--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -7,8 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <!-- to authenticate user using JWT Bearer -->
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
+
+    <!-- to be able to derive from IdentityDbContext inside our context.cs -->
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
+
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
+
+    <!-- to be able to communicate with SQL Server via EF -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
+
+    <!-- to be able to add/remove migration to our SQL Server -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Scalar.AspNetCore" Version="2.1.17" />
+
+    <!-- to be able to create, serialize and validate JSON Web Tokens -->
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.8.0" />
   </ItemGroup>
 
   <ItemGroup>
