End 2-5 Apply first migration

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\localDB1;Database=IdentityApp;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;Trusted_connection=True;"
   }
 }
