--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -8,5 +8,12 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\localDB1;Database=IdentityApp;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;Trusted_connection=True;"
+  },
+
+  "JWT": {
+    "Key": "fi91QwQOt6CKWGi10dtlYUdNQGFITytI",
+    "ExpiresInDays": 15,
+    "Issuer": "http://localhost:5000"
+
   }
 }
